--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 :root {
@@ -23,4 +24,21 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  height: 7px;
+  width: 7px;
+  border-radius: 7px;
+  border: 2px solid transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 0 10px;
+  color: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  color: #a0a0a0;
 }
